--- a/model/Application/Admin/View/Login/index.html
+++ b/model/Application/Admin/View/Login/index.html
@@ -16,7 +16,8 @@
   <!-- <link href="/Public/css/bootstrap.min.css" rel="stylesheet"> -->
   <load href='__PUBLIC__/css/bootstrap.min.css' />
   <!-- Custom styles for this template -->
-  <link href="signin.css" rel="stylesheet">
+  <!--<link href="signin.css" rel="stylesheet">-->
+  <load href='__PUBLIC__/css/bootstrap.min.css' />
   
 
 
@@ -44,7 +45,7 @@
       <label  class="sr-only">密码</label>
       <input type="password" name="password" id="inputPassword" class="form-control" placeholder="密码" required>
       <br />
-      <button class="btn btn-lg btn-primary btn-block" type="submit" >登录</button>
+      <button class="btn btn-lg btn-primary btn-block" type="button" onclick="login.check()">登录</button>
     </form>
 
 </div> <!-- /container -->
@@ -57,5 +58,8 @@
 <!-- <script src="/Public/js/admin/login.js"></script> -->
 <load href='__PUBLIC__/js/admin/login.js' />
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script>
+  // dialog.error("登录失败");
+</script>
 </body>
 </html>
