修改了登录网址：http://singcms1.com/admin.php?c=login，配置多站点，修改文章所有地址，但是菜单出不来

--- a/model/Application/Admin/View/Index/footer.html
+++ b/model/Application/Admin/View/Index/footer.html
@@ -1,4 +1,5 @@
-<script src="/Public/js/admin/common.js"></script>
+<!--<script src="/Public/js/admin/common.js"></script>-->
+<!--<load href='__PUBLIC__/js/admin/common.js' />-->
 
 
 
