把项目放到了zendstdio里，并把出现的所有的提示的语法错误改了一下，还是很头疼

--- a/model/Application/Admin/View/Content/add.html
+++ b/model/Application/Admin/View/Content/add.html
@@ -3,7 +3,8 @@
 <div id="wrapper">
 
   <include file="Index/nav"/>
-  <script src="/Public/js/kindeditor/kindeditor-all.js"></script>
+  <!-- <script src="/Public/js/kindeditor/kindeditor-all.js"></script> -->
+  <load href='__PUBLIC__/js/kindeditor/kindeditor-all.js' />
   <div id="page-wrapper">
 
     <div class="container-fluid">
@@ -129,7 +130,8 @@
 
 </script>
 <!-- /#wrapper -->
-<script src="/Public/js/admin/image.js"></script>
+<!-- <script src="/Public/js/admin/image.js"></script> -->
+<load href='__PUBLIC__/js/admin/image.js' />
 <script>
   // 6.2
   KindEditor.ready(function(K) {
