--- a/model/Application/Admin/View/Index/footer.html
+++ b/model/Application/Admin/View/Index/footer.html
@@ -1,5 +1,5 @@
 <!--<script src="/Public/js/admin/common.js"></script>-->
-<!--<load href='__PUBLIC__/js/admin/common.js' />-->
+<load href='__PUBLIC__/js/admin/common.js' />
 
 
 
