--- a/model/Application/Admin/View/Positioncontent/add.html
+++ b/model/Application/Admin/View/Positioncontent/add.html
@@ -101,6 +101,15 @@
 	};
 </script>
 <!-- /#wrapper -->
-<script type="text/javascript" src="/Public/js/admin/form.js"></script>
-<script src="/Public/js/admin/image.js"></script>
+<!-- <script type="text/javascript" src="/Public/js/admin/form.js"></script> -->
+<load href='__PUBLIC__/js/admin/form.js' />
+<!-- <script src="/Public/js/admin/image.js"></script> -->
+<load href='__PUBLIC__/js/admin/image.js' />
 <include file="Index/footer" />
+
+
+
+
+
+
+
